--- a/config/services.yaml
+++ b/config/services.yaml
@@ -17,5 +17,9 @@ services:
     App\:
         resource: '../src/'
 
+    App\Service\fileUploader:
+        arguments:
+            $targetDirectory: '%images_directory%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
