--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     role_hierarchy:
-        ROLE_ADMIN: [ ROLE_USER ]
-        ROLE_USER: [ ROLE_USER ]
+        ROLE_ADMIN: [ ROLE_ADMIN, ROLE_USER ]
+        ROLE_USER: ROLE_USER
         # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
@@ -28,9 +28,9 @@ security:
 
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
-        - { path: ^/admin, roles: [ROLE_ADMIN, IS_AUTHENTICATED_FULLY] }
-        - { path: ^/panier, roles: [ROLE_USER, IS_AUTHENTICATED_FULLY] }
-        - { path: ^/commande, roles: [ROLE_USER, IS_AUTHENTICATED_FULLY] }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/panier, roles: ROLE_USER }
+        - { path: ^/commande, roles: ROLE_USER }
         - { path: ^/api/user/me, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/, roles: PUBLIC_ACCESS }
 
