--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,4 @@
 security:
-    role_hierarchy:
-        ROLE_ADMIN: [ ROLE_ADMIN, ROLE_USER ]
-        ROLE_USER: ROLE_USER
         # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
@@ -29,10 +26,14 @@ security:
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/admin, roles: ROLE_ADMIN }
-        - { path: ^/api/panier, roles: ROLE_USER }
-        - { path: ^/api/commande, roles: ROLE_USER }
+        - { path: ^/api/basket, roles: ROLE_USER }
+        - { path: ^/api/command, roles: ROLE_USER }
         - { path: ^/api/user/me, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/, roles: PUBLIC_ACCESS }
+
+    role_hierarchy:
+        ROLE_ADMIN: [ ROLE_ADMIN, ROLE_USER ]
+        ROLE_USER: ROLE_USER
 
 when@test:
     security:
