ContollerPayement : payement validé avec Stripe

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.3",
+        "stripe/stripe-php": "^17.6",
         "symfony/asset": "7.3.*",
         "symfony/asset-mapper": "7.3.*",
         "symfony/console": "7.3.*",
